--- a/projects/angular-mydatepicker/tsconfig.lib.json
+++ b/projects/angular-mydatepicker/tsconfig.lib.json
@@ -17,12 +17,7 @@
     ]
   },
   "angularCompilerOptions": {
-    "enableIvy": false,
-    "skipTemplateCodegen": true,
-    "strictMetadataEmit": true,
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
-    "enableResourceInlining": true
+    "compilationMode": "partial"
   },
   "exclude": [
     "src/test.ts",
